@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-14157.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-14486.tgz',
      'xapian-core.tgz',
-     '796ac4192c75e7a1a9638aacc92beb39b1ce775f',
-     '',
+     'b12d48cbf58a8fa74c77390b7afdbdd504b5a350',
+     'xapian-core',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-14157.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-14486.tgz',
      'xapian-bindings.tgz',
-     '038cc109f5418ee31cf5765a360fe29b5a4f31c1',
-     '',
+     '5addd7cc247d8297ebd89cf4bd140226e9cb651d',
+     'xapian-bindings',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-14157.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-14486.tgz',
      'win32msvc.tgz',
-     '6385533bf4696dd545cfa46a6c9c0d33fc971887',
+     'c10e2cc62170d2a88ef125d19bc9f6e9bb003d26',
      'xapian-core/win32',
     ),
     ('Xapian extras',
